deployments/canary/01-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: demo-app-v2
  name: demo-app-v2
  namespace: rolling-updates
spec:
  replicas: 5
  selector:
    matchLabels:
      run: demo-app-v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        run: demo-app-v2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: demo-app-v2
        resources:
          limits: {}
        ports:
        - containerPort: 8080
          name: web
        readinessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            port: 8080
            path: /
        livenessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            port: 8080
            path: /
