deployments/canary/03-ingress-v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-v2
  namespace: rolling-updates
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "x-version"
    nginx.ingress.kubernetes.io/canary-by-header-value: "2"
spec:
  rules:
    - host: xxx-xxx-xxx-xxx.nip.io # insert "minikube ip"
      http:
        paths:
          - backend:
              serviceName: demo-app-v2
              servicePort: 8080
